@@ -1,0 +1,11 @@
+#ifndef field_h
+#define field_h
+class Field{
+public:
+	int row, col;
+	
+	Field(int r, int c);
+	void display();
+
+};
+#endif
