@@ -1,4 +1,5 @@
 #ifndef options_h
 #define options_h
 void options();	// Ask user to open data file or enter dimensions
+void defaultf(); // Set up field with preset dimensions
 #endif
